--- a/Análise de Dados/Dados_Censo_Escolar_2024_Exercício_03.ipynb
+++ b/Análise de Dados/Dados_Censo_Escolar_2024_Exercício_03.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "15b80713",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "d66d72d3",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "09dc6af3",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "c89e42a1",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "[5 rows x 101 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "04ce417b",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "4b5c0b4d",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "98fc5741",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "id": "6e1271f9",
    "metadata": {},
    "outputs": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "ecd0f932",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "87d3f9ad",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "id": "78e73d49",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "2128a95a",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "a4cd98ff",
    "metadata": {},
    "outputs": [
@@ -1454,6 +1454,369 @@
    "source": [
     "# Visualize o DataFrame final\n",
     "display(df_filtrado.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f8754ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtrado.to_csv(\"C:/Users/Administrador/Documents/GitHub/TJGO_CienciaDeDados/microdados_censo_escolar_2024/dados/microdados_ed_basica_2024_tratado.csv\", index=False, sep=';', encoding='latin1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b8d8f89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CO_ENTIDADE</th>\n",
+       "      <th>CO_REGIAO</th>\n",
+       "      <th>CO_UF</th>\n",
+       "      <th>CO_MUNICIPIO</th>\n",
+       "      <th>CO_DISTRITO</th>\n",
+       "      <th>CO_REGIAO_GEOG_INTERM</th>\n",
+       "      <th>CO_REGIAO_GEOG_IMED</th>\n",
+       "      <th>CO_MESORREGIAO</th>\n",
+       "      <th>CO_MICRORREGIAO</th>\n",
+       "      <th>IN_PREDIO_COMPARTILHADO</th>\n",
+       "      <th>...</th>\n",
+       "      <th>IN_LOCAL_FUNC_GALPAO</th>\n",
+       "      <th>IN_LOCAL_FUNC_SALAS_OUTRA_ESC</th>\n",
+       "      <th>IN_LOCAL_FUNC_OUTROS</th>\n",
+       "      <th>NU_ANO_CENSO</th>\n",
+       "      <th>DT_ANO_LETIVO_INICIO</th>\n",
+       "      <th>DT_ANO_LETIVO_TERMINO</th>\n",
+       "      <th>DURACAO_ANO_LETIVO</th>\n",
+       "      <th>DURACAO_EM_DIAS</th>\n",
+       "      <th>PC_TEMPO_INTEGRAL</th>\n",
+       "      <th>INDICE_TEC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.155450e+05</td>\n",
+       "      <td>215545.000000</td>\n",
+       "      <td>215545.000000</td>\n",
+       "      <td>2.155450e+05</td>\n",
+       "      <td>2.155450e+05</td>\n",
+       "      <td>215545.000000</td>\n",
+       "      <td>215545.000000</td>\n",
+       "      <td>215545.000000</td>\n",
+       "      <td>215545.000000</td>\n",
+       "      <td>177264.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>181065.00000</td>\n",
+       "      <td>181065.000000</td>\n",
+       "      <td>181065.000000</td>\n",
+       "      <td>215545.0</td>\n",
+       "      <td>181065</td>\n",
+       "      <td>181065</td>\n",
+       "      <td>181065</td>\n",
+       "      <td>181065.000000</td>\n",
+       "      <td>215545.000000</td>\n",
+       "      <td>215545.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.048278e+07</td>\n",
+       "      <td>2.657399</td>\n",
+       "      <td>30.316194</td>\n",
+       "      <td>3.046898e+06</td>\n",
+       "      <td>3.046898e+08</td>\n",
+       "      <td>3034.974720</td>\n",
+       "      <td>303173.872222</td>\n",
+       "      <td>5.055167</td>\n",
+       "      <td>19.971189</td>\n",
+       "      <td>0.046338</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.01257</td>\n",
+       "      <td>0.031817</td>\n",
+       "      <td>0.063011</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>2024-02-10 10:27:59.781293824</td>\n",
+       "      <td>2024-12-18 06:19:49.005053184</td>\n",
+       "      <td>311 days 19:51:49.223759424</td>\n",
+       "      <td>311.827653</td>\n",
+       "      <td>40.258961</td>\n",
+       "      <td>2.419318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.100002e+07</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>1.100015e+06</td>\n",
+       "      <td>1.100015e+08</td>\n",
+       "      <td>1101.000000</td>\n",
+       "      <td>110001.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>2023-05-31 00:00:00</td>\n",
+       "      <td>2024-05-29 00:00:00</td>\n",
+       "      <td>1 days 00:00:00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.328106e+07</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>2.313302e+06</td>\n",
+       "      <td>2.313302e+08</td>\n",
+       "      <td>2306.000000</td>\n",
+       "      <td>230016.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>2024-02-05 00:00:00</td>\n",
+       "      <td>2024-12-13 00:00:00</td>\n",
+       "      <td>305 days 00:00:00</td>\n",
+       "      <td>305.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.113590e+07</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>3.118809e+06</td>\n",
+       "      <td>3.118809e+08</td>\n",
+       "      <td>3102.000000</td>\n",
+       "      <td>310009.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>2024-02-06 00:00:00</td>\n",
+       "      <td>2024-12-19 00:00:00</td>\n",
+       "      <td>312 days 00:00:00</td>\n",
+       "      <td>312.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.523896e+07</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>3.548104e+06</td>\n",
+       "      <td>3.548104e+08</td>\n",
+       "      <td>3504.000000</td>\n",
+       "      <td>350014.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>2024-02-19 00:00:00</td>\n",
+       "      <td>2024-12-20 00:00:00</td>\n",
+       "      <td>319 days 00:00:00</td>\n",
+       "      <td>319.000000</td>\n",
+       "      <td>48.979592</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>5.308601e+07</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>5.300108e+06</td>\n",
+       "      <td>5.300108e+08</td>\n",
+       "      <td>5301.000000</td>\n",
+       "      <td>530001.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>2024-12-19 00:00:00</td>\n",
+       "      <td>2025-12-31 00:00:00</td>\n",
+       "      <td>700 days 00:00:00</td>\n",
+       "      <td>700.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.466594e+06</td>\n",
+       "      <td>1.023320</td>\n",
+       "      <td>9.464781</td>\n",
+       "      <td>9.502344e+05</td>\n",
+       "      <td>9.502344e+07</td>\n",
+       "      <td>946.840531</td>\n",
+       "      <td>94649.539801</td>\n",
+       "      <td>3.898243</td>\n",
+       "      <td>17.235537</td>\n",
+       "      <td>0.210216</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.11141</td>\n",
+       "      <td>0.175514</td>\n",
+       "      <td>0.242983</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15 days 13:33:37.544903857</td>\n",
+       "      <td>15.565018</td>\n",
+       "      <td>69.517380</td>\n",
+       "      <td>1.419523</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 86 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CO_ENTIDADE      CO_REGIAO          CO_UF  CO_MUNICIPIO   CO_DISTRITO  \\\n",
+       "count  2.155450e+05  215545.000000  215545.000000  2.155450e+05  2.155450e+05   \n",
+       "mean   3.048278e+07       2.657399      30.316194  3.046898e+06  3.046898e+08   \n",
+       "min    1.100002e+07       1.000000      11.000000  1.100015e+06  1.100015e+08   \n",
+       "25%    2.328106e+07       2.000000      23.000000  2.313302e+06  2.313302e+08   \n",
+       "50%    3.113590e+07       3.000000      31.000000  3.118809e+06  3.118809e+08   \n",
+       "75%    3.523896e+07       3.000000      35.000000  3.548104e+06  3.548104e+08   \n",
+       "max    5.308601e+07       5.000000      53.000000  5.300108e+06  5.300108e+08   \n",
+       "std    9.466594e+06       1.023320       9.464781  9.502344e+05  9.502344e+07   \n",
+       "\n",
+       "       CO_REGIAO_GEOG_INTERM  CO_REGIAO_GEOG_IMED  CO_MESORREGIAO  \\\n",
+       "count          215545.000000        215545.000000   215545.000000   \n",
+       "mean             3034.974720        303173.872222        5.055167   \n",
+       "min              1101.000000        110001.000000        1.000000   \n",
+       "25%              2306.000000        230016.000000        2.000000   \n",
+       "50%              3102.000000        310009.000000        4.000000   \n",
+       "75%              3504.000000        350014.000000        6.000000   \n",
+       "max              5301.000000        530001.000000       15.000000   \n",
+       "std               946.840531         94649.539801        3.898243   \n",
+       "\n",
+       "       CO_MICRORREGIAO  IN_PREDIO_COMPARTILHADO  ...  IN_LOCAL_FUNC_GALPAO  \\\n",
+       "count    215545.000000            177264.000000  ...          181065.00000   \n",
+       "mean         19.971189                 0.046338  ...               0.01257   \n",
+       "min           1.000000                 0.000000  ...               0.00000   \n",
+       "25%           7.000000                 0.000000  ...               0.00000   \n",
+       "50%          15.000000                 0.000000  ...               0.00000   \n",
+       "75%          27.000000                 0.000000  ...               0.00000   \n",
+       "max          66.000000                 1.000000  ...               1.00000   \n",
+       "std          17.235537                 0.210216  ...               0.11141   \n",
+       "\n",
+       "       IN_LOCAL_FUNC_SALAS_OUTRA_ESC  IN_LOCAL_FUNC_OUTROS  NU_ANO_CENSO  \\\n",
+       "count                  181065.000000         181065.000000      215545.0   \n",
+       "mean                        0.031817              0.063011        2024.0   \n",
+       "min                         0.000000              0.000000        2024.0   \n",
+       "25%                         0.000000              0.000000        2024.0   \n",
+       "50%                         0.000000              0.000000        2024.0   \n",
+       "75%                         0.000000              0.000000        2024.0   \n",
+       "max                         1.000000              1.000000        2024.0   \n",
+       "std                         0.175514              0.242983           0.0   \n",
+       "\n",
+       "                DT_ANO_LETIVO_INICIO          DT_ANO_LETIVO_TERMINO  \\\n",
+       "count                         181065                         181065   \n",
+       "mean   2024-02-10 10:27:59.781293824  2024-12-18 06:19:49.005053184   \n",
+       "min              2023-05-31 00:00:00            2024-05-29 00:00:00   \n",
+       "25%              2024-02-05 00:00:00            2024-12-13 00:00:00   \n",
+       "50%              2024-02-06 00:00:00            2024-12-19 00:00:00   \n",
+       "75%              2024-02-19 00:00:00            2024-12-20 00:00:00   \n",
+       "max              2024-12-19 00:00:00            2025-12-31 00:00:00   \n",
+       "std                              NaN                            NaN   \n",
+       "\n",
+       "                DURACAO_ANO_LETIVO  DURACAO_EM_DIAS  PC_TEMPO_INTEGRAL  \\\n",
+       "count                       181065    181065.000000      215545.000000   \n",
+       "mean   311 days 19:51:49.223759424       311.827653          40.258961   \n",
+       "min                1 days 00:00:00         1.000000           0.000000   \n",
+       "25%              305 days 00:00:00       305.000000           0.000000   \n",
+       "50%              312 days 00:00:00       312.000000           0.000000   \n",
+       "75%              319 days 00:00:00       319.000000          48.979592   \n",
+       "max              700 days 00:00:00       700.000000         200.000000   \n",
+       "std     15 days 13:33:37.544903857        15.565018          69.517380   \n",
+       "\n",
+       "          INDICE_TEC  \n",
+       "count  215545.000000  \n",
+       "mean        2.419318  \n",
+       "min         0.000000  \n",
+       "25%         2.000000  \n",
+       "50%         3.000000  \n",
+       "75%         3.000000  \n",
+       "max         4.000000  \n",
+       "std         1.419523  \n",
+       "\n",
+       "[8 rows x 86 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_filtrado.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "64470821",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 215545 entries, 0 to 215544\n",
+      "Columns: 105 entries, CO_ENTIDADE to INDICE_TEC\n",
+      "dtypes: datetime64[ns](2), float64(73), int64(10), object(19), timedelta64[ns](1)\n",
+      "memory usage: 172.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_filtrado.info()"
    ]
   }
  ],
