Alteração nos insights dos gráficos

--- a/Análise de Dados/Censo Escolar 2024/Dados_Censo_Escolar_2024_Exercício_4.ipynb
+++ b/Análise de Dados/Censo Escolar 2024/Dados_Censo_Escolar_2024_Exercício_4.ipynb
@@ -1553,6 +1553,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1743c0c2",
+   "metadata": {},
+   "source": [
+    "Em resumo, o grande desafio da política pública de inclusão digital, segundo este gráfico, não é apenas a diferença entre campo e cidade, mas a extrema desigualdade de recursos dentro das próprias áreas urbanas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "id": "174d49f1",
@@ -1936,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "id": "b5bc0092",
    "metadata": {},
    "outputs": [
@@ -2011,297 +2019,17 @@
        "      <td>Rural</td>\n",
        "      <td>4.84</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Centro-Oeste</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>7.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Centro-Oeste</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>17.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Centro-Oeste</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>27.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>8.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>13.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>75.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>136.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>2.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>5.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>8.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>14.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>3.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>11.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>61.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>110.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>1.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>5.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>12.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Norte</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>16.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>13.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>23.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>124.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>126.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>3.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>10.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>24.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>30.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>10.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Estadual</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>19.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>135.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Federal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>163.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>4.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Municipal</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>9.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>8.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>Privada</td>\n",
-       "      <td>Urbana</td>\n",
-       "      <td>28.40</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       NO_REGIAO TP_DEPENDENCIA TP_LOCALIZACAO  QT_DESKTOP_ALUNO\n",
-       "0   Centro-Oeste       Estadual          Rural              9.24\n",
-       "1   Centro-Oeste       Estadual         Urbana             23.89\n",
-       "2   Centro-Oeste        Federal          Rural            148.67\n",
-       "3   Centro-Oeste        Federal         Urbana             74.15\n",
-       "4   Centro-Oeste      Municipal          Rural              4.84\n",
-       "5   Centro-Oeste      Municipal         Urbana              7.89\n",
-       "6   Centro-Oeste        Privada          Rural             17.78\n",
-       "7   Centro-Oeste        Privada         Urbana             27.75\n",
-       "8       Nordeste       Estadual          Rural              8.77\n",
-       "9       Nordeste       Estadual         Urbana             13.68\n",
-       "10      Nordeste        Federal          Rural             75.76\n",
-       "11      Nordeste        Federal         Urbana            136.14\n",
-       "12      Nordeste      Municipal          Rural              2.17\n",
-       "13      Nordeste      Municipal         Urbana              5.45\n",
-       "14      Nordeste        Privada          Rural              8.23\n",
-       "15      Nordeste        Privada         Urbana             14.27\n",
-       "16         Norte       Estadual          Rural              3.40\n",
-       "17         Norte       Estadual         Urbana             11.23\n",
-       "18         Norte        Federal          Rural             61.64\n",
-       "19         Norte        Federal         Urbana            110.91\n",
-       "20         Norte      Municipal          Rural              1.78\n",
-       "21         Norte      Municipal         Urbana              5.71\n",
-       "22         Norte        Privada          Rural             12.13\n",
-       "23         Norte        Privada         Urbana             16.58\n",
-       "24       Sudeste       Estadual          Rural             13.21\n",
-       "25       Sudeste       Estadual         Urbana             23.27\n",
-       "26       Sudeste        Federal          Rural            124.74\n",
-       "27       Sudeste        Federal         Urbana            126.16\n",
-       "28       Sudeste      Municipal          Rural              3.43\n",
-       "29       Sudeste      Municipal         Urbana             10.36\n",
-       "30       Sudeste        Privada          Rural             24.29\n",
-       "31       Sudeste        Privada         Urbana             30.37\n",
-       "32           Sul       Estadual          Rural             10.74\n",
-       "33           Sul       Estadual         Urbana             19.58\n",
-       "34           Sul        Federal          Rural            135.89\n",
-       "35           Sul        Federal         Urbana            163.92\n",
-       "36           Sul      Municipal          Rural              4.74\n",
-       "37           Sul      Municipal         Urbana              9.57\n",
-       "38           Sul        Privada          Rural              8.76\n",
-       "39           Sul        Privada         Urbana             28.40"
+       "      NO_REGIAO TP_DEPENDENCIA TP_LOCALIZACAO  QT_DESKTOP_ALUNO\n",
+       "0  Centro-Oeste       Estadual          Rural              9.24\n",
+       "1  Centro-Oeste       Estadual         Urbana             23.89\n",
+       "2  Centro-Oeste        Federal          Rural            148.67\n",
+       "3  Centro-Oeste        Federal         Urbana             74.15\n",
+       "4  Centro-Oeste      Municipal          Rural              4.84"
       ]
      },
      "metadata": {},
@@ -2313,7 +2041,7 @@
     "desvio_padrao = df_infra_tec.groupby(['NO_REGIAO', 'TP_DEPENDENCIA', 'TP_LOCALIZACAO'])['QT_DESKTOP_ALUNO'].std().reset_index()\n",
     "desvio_padrao = desvio_padrao.round(2)\n",
     "print(\"\\nDesvio padrão na quantidade de computadores de mesa\")\n",
-    "display(desvio_padrao)"
+    "display(desvio_padrao.head())"
    ]
   },
   {
@@ -2721,12 +2449,20 @@
    "id": "cec486b7",
    "metadata": {},
    "source": [
-    "O gráfico de dispersão revela uma distribuição altamente desigual e não linear da infraestrutura tecnológica nas escolas brasileiras. Enquanto algumas poucas escolas possuem um número excepcional de computadores, a vasta maioria opera com pouquíssimos ou nenhum equipamento. Crucialmente, observamos que o aumento no número de matrículas não se traduz consistentemente em um maior número de computadores, resultando em escolas de grande porte que ainda carecem de recursos tecnológicos adequados para seus alunos. Este padrão salienta um significativo desafio de equidade e acesso à tecnologia na educação básica."
+    "O gráfico revela que o cenário educacional brasileiro, no que tange a recursos digitais, é caracterizado por:\n",
+    "\n",
+    "Uma grande massa de escolas pequenas com poucos computadores.\n",
+    "\n",
+    "Uma relação positiva, porém fraca, entre o número de alunos e a quantidade de computadores, indicando que mais alunos não garante proporcionalmente mais equipamentos.\n",
+    "\n",
+    "Uma forte desigualdade de infraestrutura entre escolas de mesmo porte, sendo este talvez o insight mais importante do gráfico.\n",
+    "\n",
+    "Em suma, a quantidade de computadores em uma escola é influenciada por muitos outros fatores além do seu tamanho em número de matrículas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "id": "685657f6",
    "metadata": {},
    "outputs": [
@@ -2745,10 +2481,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "441120aa",
+   "id": "c341c6b6",
    "metadata": {},
    "source": [
-    "A covariância negativa, mesmo sendo numericamente pequena (mas maior que a correlação), pode ser influenciada por algumas escolas muito grandes com poucos computadores, ou por peculiaridades na distribuição dos dados. No entanto, o desfecho da correlação é que essa tendência, se existe, não é linearmente significativa."
+    "Este valor, por ser positivo, nos diz a direção da relação: quando uma variável sobe, a outra também tende a subir. Ou seja, mais matrículas está associado a mais computadores."
    ]
   },
   {
@@ -2775,7 +2511,9 @@
    "id": "1f3f6a87",
    "metadata": {},
    "source": [
-    "A análise quantitativa da correlação de Pearson (-0.02) entre o número de matrículas e o total de computadores confirma a observação visual do gráfico de dispersão: não existe uma relação linear significativa entre o tamanho da escola (em número de alunos) e a quantidade de equipamentos tecnológicos disponíveis para os alunos. Isso sugere que o provimento de infraestrutura de informática não está diretamente atrelado à demanda gerada pelo volume de estudantes, resultando em uma distribuição de recursos que não segue uma lógica de escala linear e, como visto anteriormente, é altamente desigual."
+    "O resultado da covariância (7436.78) mostra que a relação entre o número de matrículas e o total de computadores é positiva. O cálculo da Correlação de Pearson (0.40) confirma essa direção positiva e, mais importante, quantifica a força dessa relação como fraca a moderada.\n",
+    "\n",
+    "Isso valida perfeitamente o que vimos no gráfico de dispersão: existe uma tendência de aumento, mas ela não é forte e a grande dispersão dos pontos mostra que o número de matrículas de uma escola não é um fator muito confiável para prever sua quantidade de computadores. A correlação de 0.40 é a expressão numérica exata dessa realidade visual."
    ]
   },
   {
@@ -2828,7 +2566,7 @@
    "id": "4f0a5595",
    "metadata": {},
    "source": [
-    "Enquanto o coeficiente de Pearson (-0.02) indicou uma ausência de relação linear entre o número de matrículas e o total de computadores, a análise do Coeficiente de Spearman (0.51) revela a existência de uma relação monotônica positiva moderada. Isso significa que, embora o aumento no número de computadores não seja proporcional ou estritamente linear ao aumento de matrículas, escolas com mais alunos tendem a estar classificadas mais alto também em termos de quantidade de computadores. Essa discrepância entre os dois coeficientes é crucial: ela sugere que, à medida que as escolas crescem em número de alunos, há uma tendência geral de que sua infraestrutura de tecnologia também aumente, mas de forma inconsistente ou com grandes variações, e não seguindo uma proporção direta. Isso reforça a ideia de que, mesmo com essa tendência, a distribuição não é equitativa e pode não atender às necessidades de acesso individual à tecnologia em muitas instituições."
+    "O resultado da Correlação de Spearman (0.52) nos dá uma visão talvez mais fiel da relação entre as variáveis. Ele sugere que, embora a relação não siga uma linha reta perfeita (por isso a correlação de Pearson é mais baixa), existe uma tendência moderada e consistente de que um aumento no número de alunos esteja associado a um aumento no número de computadores."
    ]
   },
   {
@@ -2865,14 +2603,6 @@
     "media_alunos_por_comp_dependencia = df_com_comp.groupby('TP_DEPENDENCIA')['ALUNOS_POR_COMPUTADOR'].mean().sort_values(ascending=False).round(2)\n",
     "print(\"\\nMédia de Alunos por Computador, por Dependência:\")\n",
     "print(media_alunos_por_comp_dependencia)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec574060",
-   "metadata": {},
-   "source": [
-    "A análise da métrica ALUNOS_POR_COMPUTADOR revela uma desigualdade alarmante no acesso à infraestrutura tecnológica entre as diferentes dependências administrativas. As escolas municipais enfrentam a situação mais crítica, com uma média de 63 alunos compartilhando um único computador, o que inviabiliza o uso pedagógico eficaz da tecnologia. Enquanto isso, as escolas federais demonstram um padrão de excelência, com uma proporção muito mais favorável de aproximadamente 9 alunos por computador. Esta disparidade sublinha a necessidade urgente de políticas públicas focadas em reduzir o déficit tecnológico nas dependências mais vulneráveis, garantindo que o acesso a computadores não seja um privilégio, mas uma realidade para todos os estudantes da educação básica."
    ]
   },
   {
